syntax = "proto3";
package cosmonaut.wayne.wayne;

import "wayne/pool.proto";
import "wayne/deposit.proto";
import "wayne/borrow.proto";
import "wayne/user.proto";
import "wayne/interface_apr.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/cosmonaut/wayne/x/wayne/types";

// Msg defines the Msg service.
service Msg {
    rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
  rpc UpdatePool(MsgUpdatePool) returns (MsgUpdatePoolResponse);
  rpc DeletePool(MsgDeletePool) returns (MsgDeletePoolResponse);
rpc CreateDeposit(MsgCreateDeposit) returns (MsgCreateDepositResponse);
  rpc UpdateDeposit(MsgUpdateDeposit) returns (MsgUpdateDepositResponse);
  rpc DeleteDeposit(MsgDeleteDeposit) returns (MsgDeleteDepositResponse);
rpc CreateBorrow(MsgCreateBorrow) returns (MsgCreateBorrowResponse);
  rpc UpdateBorrow(MsgUpdateBorrow) returns (MsgUpdateBorrowResponse);
  rpc DeleteBorrow(MsgDeleteBorrow) returns (MsgDeleteBorrowResponse);
rpc CreateUser(MsgCreateUser) returns (MsgCreateUserResponse);
  rpc UpdateUser(MsgUpdateUser) returns (MsgUpdateUserResponse);
  rpc DeleteUser(MsgDeleteUser) returns (MsgDeleteUserResponse);
rpc CreateInterfaceApr(MsgCreateInterfaceApr) returns (MsgCreateInterfaceAprResponse);
  rpc UpdateInterfaceApr(MsgUpdateInterfaceApr) returns (MsgUpdateInterfaceAprResponse);
  rpc DeleteInterfaceApr(MsgDeleteInterfaceApr) returns (MsgDeleteInterfaceAprResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePool {
  string creator = 1;
  string asset = 2;
  string denom = 3;
  int32 collatoralFactor = 4;
  int32 depth = 5;
  repeated InterfaceApr aPR = 6;
  repeated User users = 7;
}

message MsgCreatePoolResponse {
  uint64 id = 1;
}

message MsgUpdatePool {
  string creator = 1;
  uint64 id = 2;
  string asset = 3;
  string denom = 4;
  int32 collatoralFactor = 5;
  int32 depth = 6;
  repeated InterfaceApr aPR = 7;
  repeated User users = 8;
}

message MsgUpdatePoolResponse {}

message MsgDeletePool {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeletePoolResponse {}

message MsgCreateDeposit {
  string creator = 1;
  int32 blockHeight = 2;
  string asset = 3;
  int32 amount = 4;
  string denom = 5;
}

message MsgCreateDepositResponse {
  uint64 id = 1;
}

message MsgUpdateDeposit {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgUpdateDepositResponse {}

message MsgDeleteDeposit {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteDepositResponse {}

message MsgCreateBorrow {
  string creator = 1;
  int32 blockHeight = 2;
  string asset = 3;
  int32 amount = 4;
  string denom = 5;
}

message MsgCreateBorrowResponse {
  uint64 id = 1;
}

message MsgUpdateBorrow {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgUpdateBorrowResponse {}

message MsgDeleteBorrow {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteBorrowResponse {}

message MsgCreateUser {
  string creator = 1;
  repeated bool collateral = 2;
  repeated Deposit deposit = 3;
  repeated Borrow borrow = 4;
  repeated int32 assetBalances = 5;
}

message MsgCreateUserResponse {
  uint64 id = 1;
}

message MsgUpdateUser {
  string creator = 1;
  uint64 id = 2;
  repeated bool collateral = 3;
  repeated Deposit deposit = 4;
  repeated Borrow borrow = 5;
  repeated int32 assetBalances = 6;
}

message MsgUpdateUserResponse {}

message MsgDeleteUser {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteUserResponse {}

message MsgCreateInterfaceApr {
  string creator = 1;
  string blocktime = 2;
  int32 timeApr = 3;
}

message MsgCreateInterfaceAprResponse {
  uint64 id = 1;
}

message MsgUpdateInterfaceApr {
  string creator = 1;
  uint64 id = 2;
  string blocktime = 3;
  int32 timeApr = 4;
}

message MsgUpdateInterfaceAprResponse {}

message MsgDeleteInterfaceApr {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteInterfaceAprResponse {}

// this line is used by starport scaffolding # proto/tx/message